Test/git-issues/git-issue-484.dfy.expect
git-issue-484.dfy(10,6): Error: type of corresponding source/RHS (int) does not match type of bound variable (MyInt)
git-issue-484.dfy(19,6): Error: type of corresponding source/RHS (real) does not match type of bound variable (MyInt)
git-issue-484.dfy(23,6): Error: incorrect type of datatype constructor argument (found int, expected MyInt)
git-issue-484.dfy(34,6): Error: type of corresponding source/RHS (int) does not match type of bound variable (byte)
git-issue-484.dfy(40,6): Error: incorrect type of datatype constructor argument (found int, expected byte)
5 resolution/type errors detected in git-issue-484.dfy
